# python-picnic-api

./: .gitignore  README.md  default.nix  flake.nix  pyproject.toml
.devcontainer/: devcontainer.json
.github/: release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml
.github/workflows/: ci.yaml  it.yaml  release.yml
integration_tests/: test_client.py  test_helper.py  test_session.py
python_picnic_api/: client.py
python_picnic_api2/: client.py  helper.py  session.py
src/python_picnic_api2/: client.py  helper.py
tests/: test_client.py  test_session.py
