[tool.poetry]
name = "python-picnic-api2"
version = "1.1.0"
description = ""
license = "Apache-2.0"
authors = ["Mike Brink <mjh.brink@icloud.com>", "Noah Groß <pypi@codesalat.dev>"]
readme = "README.rst"
repository = "https://github.com/codesalatdev/python-picnic-api"

[tool.poetry.dependencies]
python = ">=3.11.0"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3"
ruff = "^0.9.6"
python-dotenv = "^0.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
