[project]
name = "python-picnic-api2"
version = "1.1.2"
description = ""
readme = "README.rst"
license = "Apache-2.0"
maintainers = [
  { name = "CodeSalat", email = "pypi@codesalat.dev"}
]
authors = [
  { name = "Mike Brink", email = "mjh.brink@icloud.com"},
  { name = "CodeSalat", email = "pypi@codesalat.dev"}
]
urls = {homepage = "https://github.com/codesalatdev/python-picnic-api", repository = "https://github.com/codesalatdev/python-picnic-api"}
requires-python = ">=3.11"
dependencies = [
  "requests>=2.24.0"
]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
ruff = "^0.9.6"
python-dotenv = "^0.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
